--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,62 @@
 .read-the-docs {
   color: #888;
 }
+
+.header {
+  margin: 2em 0;
+  color: #646cff;
+  font-size: 2.5em;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #eee;
+  padding: 1rem 0;
+  width: 100%;
+}
+
+.card {
+  scale: 0.8;
+  margin: 1rem;
+  flex: 1 1 300px;
+  padding: 2rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.card:hover,
+.card:focus,
+.card:active {
+  color: #646cff;
+  border-color: #646cff;
+}
+
+.card h3 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
+
+.card p {
+  margin: 0;
+  font-size: 1.25rem;
+  line-height: 1.5;
+}
+
+.card img {
+  width: 100%;
+  height: 50%;
+  display: block;
+  border-radius: 10px;
+}
+
+.grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
